Add bookmarks page
  - Get bookmarks for user and show it on the profile page
    under the bookmarks tab
  - Add missing requests package to dependencies
  - Fix error in bookmark REST api

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,6 +17,6 @@ recursive-include argux_server *.woff
 recursive-include argux_server *.woff2
 recursive-include argux_server *.xml
 
-prune argux_server/static/js/source*
+#prune argux_server/static/js/source*
 prune test*
 prune tests*
